--- a/htmlpage.html
+++ b/htmlpage.html
@@ -414,26 +414,26 @@
 	
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="./js/jquery.min.js"></script>
+	<script src="./jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="./js/jquery.easing.1.3.js"></script>
+	<script src="./jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="./js/bootstrap.min.js"></script>
+	<script src="./bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="./js/jquery.waypoints.min.js"></script>
+	<script src="./jquery.waypoints.min.js"></script>
 	<!-- Stellar Parallax -->
-	<script src="./js/jquery.stellar.min.js"></script>
+	<script src="./jquery.stellar.min.js"></script>
 	<!-- Carousel -->
-	<script src="./js/owl.carousel.min.js"></script>
+	<script src="./owl.carousel.min.js"></script>
 	<!-- Flexslider -->
-	<script src="./js/jquery.flexslider-min.js"></script>
+	<script src="./jquery.flexslider-min.js"></script>
 	<!-- countTo -->
-	<script src="./js/jquery.countTo.js"></script>
+	<script src="./jquery.countTo.js"></script>
 	<!-- Magnific Popup -->
-	<script src="./js/jquery.magnific-popup.min.js"></script>
-	<script src="./js/magnific-popup-options.js"></script>
+	<script src="./jquery.magnific-popup.min.js"></script>
+	<script src="./magnific-popup-options.js"></script>
 	<!-- Main -->
-	<script src="./js/main.js"></script>
+	<script src="./main.js"></script>
 
 	</body>
 </html>
